# llm-introspection

./: .gitignore  .gitmodules  Makefile  README.md  chat-ui.env.local  download_cc.sh  download_mila.sh  monitor.sh  pyproject.toml  python_mila_tgi_job.sh  python_mila_tgi_x1_job.sh  python_mila_tgi_x4_job.sh  python_narval_tgi_job.sh  python_narval_tgi_x1_job.sh  python_narval_tgi_x4_job.sh  tox.ini
batch_export/: create_plots.sh  create_prompt_figures.sh
experiments/: analysis.py  answerable.py  download.py  experiment_id.py  integrity.py
export/: latex_compute.py  latex_prompt.py  plot_answerable.py  plot_answerable_classes.py  plot_answerable_introspection.py  plot_answerable_y-classes_x-prompt.py  plot_classify.py  plot_classify_accuracy.py  plot_classify_classes.py  plot_classify_y-accuracy_x-model.py  plot_classify_y-accuracy_x-prompt.py  plot_classify_y-classes_x-prompt.py  plot_counterfactual.py  plot_counterfactual_classes.py  plot_counterfactual_faithfulness.py  plot_counterfactual_y-classes_x-prompt.py  plot_counterfactual_y-faithfulness_x-prompt.py  plot_explain_f-task_y-faithfulness_x-model.py  plot_explain_f-task_y-faithfulness_x-prompt.py  plot_explain_y-faithfulness_x-model.py  plot_faithful.py  plot_importance.py  plot_importance_classes.py  plot_importance_faithfulness.py  plot_importance_y-classes_x-prompt.py  plot_importance_y-faithfulness_x-prompt.py  plot_introspect.py  plot_redacted.py  plot_redacted_classes.py  plot_redacted_faithfulness.py  plot_redacted_y-classes_x-prompt.py  plot_redacted_y-faithfulness_x-prompt.py
jobs/: _submitjob.sh  (+5 more)
(+90 files in other folders)
