[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["introspect"]

[project]
name = "introspect"
description = "Evaluates faithfulness and introspection in LLMs"
version = "0.1.0"
readme = "LICENSE.txt"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy >= 1.25.2",
    "tqdm >= 4.66.1",
    "plotnine >= 0.12.0",
    "numexpr >= 2.8.4",  # speedup pandas
    "bottleneck >= 1.3.6",  # speedup pandas
    "fastparquet >= 2023.2.0",  # parquet support for pandas
    "pandas >= 2.0.0,<3.0.0",
    "aiohttp >= 3.8.0,<4.0.0",
    "datasets >= 2.14.0,<3.0.0",
    "aiosqlite >= 0.19.0,<0.20.0",
    "asyncstdlib >= 3.10.0,<4.0.0",
    "tblib >= 2.0.0,<3.0.0",
    "text-generation >= 0.6.0"
]

[project.optional-dependencies]
test = [
    "pytest-skip-slow >= 0.0.5",  # enables pytest.mark.slow
    "pytest-asyncio >= 0.21.1",  # enables pytest.mark.asyncio
    "pytest-httpserver >= 1.0.8", # enables httpserver
    "pytest-env >= 1.0.0", # enables pytest ENV config
    "pytest >= 7.2.1",
    "tox >= 3.24.4",
]
